# label-studio-be

./: .dockerignore  .gitignore  cache.db  conda-dev-env.yml  docker-compose.yml  hatch.toml  make.sh  pyproject.toml  pytest.ini
annotation-templates/: SAM-segmentation.yml
app/: Dockerfile  conda-env.yml
app-old/: _wsgi.py  cache.db  condarc
examples/meta_sam/: README.md  conftest.py  docker-compose.yml  model.py  nothing.py  requirements.txt  sam.Dockerfile  test_sam.py  test_worker.py  worker.py
models/: __init__.py  core.py  mediaret.py  utils.py
models/sam/: model.py
src/label_studio_berq/: api-old.py  redis.py  test.py  typer.py  worker.py
src/label_studio_berq/api/: main.py  models.py  utils.py
tests/: conftest.py  docker-compose.yml  fixtures_resources.py  test_core.py  test_sam.py  test_typer.py  test_worker.py
tests/api/: test_main.py  test_models.py  test_utils.py
tests/docker/: worker.Dockerfile
tests/resources/: context-kp.json  context-kp2.json  context-preanno.json  context-rect.json  predict.json  task.json
