[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-packages = true
sources = ["src"]

[project]
name = "label-studio-berq"
dynamic = ["version"]
description = "An RQ based client/worker model backend for Label Studio"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Tony Hallam"},
]
keywords = [
    "label-studio"
]
dependencies = [
    "fastapi[standard]",
    "rq",
    "label_studio_ml @ git+https://github.com/HumanSignal/label-studio-ml-backend.git@145f328",
    "label_studio_sdk",
    "label_studio_converter",
    "click_params",
]

[project.optional-dependencies]
full = [
    "shapely",
    "opencv-python-headless",
]
dev = [
    "label-studio-berq[full]",
    "black",
]

[tool]

[tool.pytest.ini_options]
testpaths = ["tests", "examples/meta_sam"]
addopts = [
    "--import-mode=importlib",
]
